--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,11 @@
 /captures
 .externalNativeBuild
 .cxx
-local.properties
+
+/backend/node_modules
+/backend/.env
+/backend/dist
+/backend/npm-debug.log
+/backend/yarn-debug.log
+/backend/yarn-error.log
+
